--- a/package.json
+++ b/package.json
@@ -7,10 +7,9 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "cool-ascii-faces": "~1.3.x",
-    "d3": "2.4.1",
-    "express": "~4.9.x",
-    "express.io": "^1.1.13",
+    "express": "~3.0.0",
+    "express-persona": "^0.1.2",
+    "path": "^0.11.14",
     "pg": "4.x",
     "socket.io": "^1.3.4"
   },
@@ -19,7 +18,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/heroku/node-js-getting-started"
+    "url": "https://github.com/NielsKornerup/qbPieChart"
   },
   "keywords": [
     "node",
