--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "dependencies": {
     "express": "~3.0.0",
     "express-persona": "^0.1.2",
+    "node-schedule": "^0.2.3",
     "path": "^0.11.14",
     "pg": "4.x",
+    "sha1": "^1.1.0",
     "socket.io": "^1.3.4"
   },
   "engines": {
