--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "node-schedule": "^0.2.3",
     "path": "^0.11.14",
     "pg": "4.x",
+    "pg-native": "^1.8.0",
     "sha1": "^1.1.0",
     "socket.io": "^1.3.4"
   },
