--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "ejs": "^2.3.1",
     "express": "~3.0.0",
     "express-persona": "^0.1.2",
     "node-schedule": "^0.2.3",
